Update ChatInputView.scss Chat container overflow issue fix.
Keeps the text in the chat container from leaking out during flex gaps. Giving it a buggy distorted look for the user.

--- a/src/components/room/widgets/chat-input/ChatInputView.scss
+++ b/src/components/room/widgets/chat-input/ChatInputView.scss
@@ -11,6 +11,7 @@
     background: #e4e4e4;
     border-radius: 9px;
     z-index: 71;
+    overflow: hidden;
 
     @include media-breakpoint-down(sm) {
         display: flex;
